# kafka-view

./: Cargo.toml  rust-toolchain
src/: cache.rs  config.rs  db_exec.rs  file_ops.rs  live_consumer.rs  main.rs  metadata.rs  metrics.rs  offsets.rs  utils.rs  zk.rs
src/web_server/: api.rs  server.rs
src/web_server/pages/: cluster.rs  clusters.rs  group.rs  internals.rs  omnisearch.rs  topic.rs
src/web_server/view/: layout.rs
