[package]
name = "kafka-view"
version = "0.3.3"
authors = ["Federico Giraud <giraud.federico@gmail.com>"]
license = "MIT"
build = "build.rs"

[dependencies]
rocket = "0.4.0"
rocket_codegen = "0.4.0"
maud = { version = "0.20.0", features = ["rocket"] }
ring = "0.16.20"
mysql = "26.0.0"
postgres = "=0.17.5"
libc = "^0.2.71"
futures = "=0.1.29"
futures-cpupool = "=0.1.8"
chrono = "^0.4.10"
error-chain = "=0.12.1"
serde = "^1.0.104"
serde_derive = "^1.0.104"
serde_json = "^1.0.44"
serde_yaml = "=0.8.11"
zookeeper = "=0.5.5"
rand = "=0.6.5"
log = "^0.4.8"
env_logger = "=0.6.2"
hyper = "=0.10.16"
rdkafka = "=0.13.0"
clap = "=2.33.0"
regex = "^1.5"
scheduled-executor = "=0.4.0"
lazy_static = "=1.4.0"
brotli = "=3.3.0"
flate2 = "=1.0.13"
byteorder = "=1.3.4"
des = "0.8"
block-modes = "0.9"
aes = "0.8.4"
cbc = "0.1.2"
cipher = "0.4.4"
md5 = "0.8.0"
md2 = "0.10.2"
mongodb = { version = "3.3", features = ["sync"] }
bson = "2"
neo4rs = "0.8.0"